Build the button component.

--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,11 +16,8 @@
 </head>
 
 <body>
-    <span class="icon-container">
-        <svg class="icon icon--primary">
-            <use xlink:href="icons/sprite.svg#wordpress"></use>
-        </svg>
-    </span>
+    <button class="btn btn--primary btn-block">Buy</button>
+    <a href="#" class="btn btn--outline btn-block">Buy Now</a>
 </body>
 
 </html>
