--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,19 +16,24 @@
 </head>
 
 <body>
-    <div class="media">
-        <div class="media__image">
-            <svg class="icon icon--primary">
-                <use xlink:href="icons/sprite.svg#snap"></use>
-            </svg>
-        </div>
-        <div class="media__body">
-            <h3 class="media__title">Easy Start & Managed Updates</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque delectus quae,
-                perspiciatis quod corporis nam tenetur saepe.
-            </p>
-        </div>
-    </div>
+    <blockquote class="quote">
+        <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio odio natus eos
+            dicta tempora delectus cumque enim qui nisi.
+        </p>
+        <footer>
+            <div class="media">
+                <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                        <use xlink:href="icons/sprite.svg#line"></use>
+                    </svg>
+                </div>
+                <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__org">ABC Company</p>
+                </div>
+            </div>
+        </footer>
+    </blockquote>
 </body>
 
 </html>
