--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,35 +16,15 @@
 </head>
 
 <body>
-    <div class="card testimonial">
+    <div class="callout callout--primary">
         <div class="grid grid--1x2">
-            <div class="testimonial__img">
-                <img src="icons/testimonial.jpg" alt="A happy, smiling component">
-                <span class="icon-container icon-container--accent">
-                    <svg class="icon--small icon--white">
-                        <use xlink:href="icons/sprite.svg#quotes"></use>
-                    </svg>
-                </span>
-            </div>
-            <blockquote class="quote">
-                <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio odio
-                    natus eos
-                    dicta tempora delectus cumque enim qui nisi.
+            <div class="callout__content">
+                <h2 class="callout__heading">Ready to Get Started?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, quidem expedita earum neque
+                    error mollitia ex eligendi quia quibusdam dicta?
                 </p>
-                <footer>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon--primary quote__line">
-                                <use xlink:href="icons/sprite.svg#line"></use>
-                            </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="media__title quote__author">John Smith</h3>
-                            <p class="quote__org">ABC Company</p>
-                        </div>
-                    </div>
-                </footer>
-            </blockquote>
+            </div>
+            <a href="#" class="btn btn--secondary btn--stretched">GET STARTED</a>
         </div>
     </div>
 </body>
