Build the collapsible component.

--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,17 +16,20 @@
 </head>
 
 <body>
-    <div class="callout callout--primary">
-        <div class="grid grid--1x2">
-            <div class="callout__content">
-                <h2 class="callout__heading">Ready to Get Started?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, quidem expedita earum neque
-                    error mollitia ex eligendi quia quibusdam dicta?
-                </p>
-            </div>
-            <a href="#" class="btn btn--secondary btn--stretched">GET STARTED</a>
+    <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+            <h2 class="collapsible__heading">Item 1</h2>
+            <svg class="icon icon--white collapsible__chevron">
+                <use xlink:href="icons/sprite.svg#chevron"></use>
+            </svg>
+        </header>
+        <div class="collapsible__content">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, mollitia nulla rerum molestias placeat a
+                architecto atque nobis? Minus, omnis.
+            </p>
         </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
