--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,19 +16,25 @@
 </head>
 
 <body>
-    <div class="collapsible collapsible--expanded">
-        <header class="collapsible__header">
-            <h2 class="collapsible__heading">Item 1</h2>
-            <svg class="icon icon--white collapsible__chevron">
-                <use xlink:href="icons/sprite.svg#chevron"></use>
-            </svg>
-        </header>
-        <div class="collapsible__content">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, mollitia nulla rerum molestias placeat a
-                architecto atque nobis? Minus, omnis.
+    <section class="block container">
+        <header class="block__header">
+            <h2 class="block__heading">Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam placeat qui odit praesentium quod
+                maxime, doloremque nisi et nihil itaque.
             </p>
+        </header>
+    </section>
+    <section class="block block--dark block--skewed-left">
+        <div class="container">
+            <header class="block__header">
+                <h2 class="block__heading">Heading</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam placeat qui odit praesentium
+                    quod
+                    maxime, doloremque nisi et nihil itaque.
+                </p>
+            </header>
         </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
 </body>
 
