--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,25 +16,18 @@
 </head>
 
 <body>
-    <section class="block container">
-        <header class="block__header">
-            <h2 class="block__heading">Heading</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam placeat qui odit praesentium quod
-                maxime, doloremque nisi et nihil itaque.
-            </p>
-        </header>
-    </section>
-    <section class="block block--dark block--skewed-left">
-        <div class="container">
-            <header class="block__header">
-                <h2 class="block__heading">Heading</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam placeat qui odit praesentium
-                    quod
-                    maxime, doloremque nisi et nihil itaque.
-                </p>
-            </header>
-        </div>
-    </section>
+    <nav class="nav collapsible">
+        <a class="nav__brand" href="index.html"><img src="icons/logo.svg" alt=""></a>
+        <svg class="icon icon--white nav__toggler">
+            <use xlink:href="icons/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+            <li class="nav__item"><a href="#">Hosting</a></li>
+            <li class="nav__item"><a href="#">VPS</a></li>
+            <li class="nav__item"><a href="#">Domain</a></li>
+            <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+    </nav>
     <script src="js/main.js"></script>
 </body>
 
