--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,69 +16,73 @@
 </head>
 
 <body>
-    <section class="block container block-plans">
-        <div class="grid grid--1x3">
-            <div class="plan">
-                <div class="card card--secondary">
-                    <header class="card__header">
-                        <h3 class="plan__name">Entry</h3>
-                        <span class="plan__price">$14</span>
-                        <span class="plan__billing-cycle">/month</span>
-                        <span class="badge badge--secondary badge--small">10% OFF</span>
-                        <span class="plan__description">Easy start on the cloud</span>
-                    </header>
-                    <div class="card__body">
-                        <ul class="list list--tick">
-                            <li class="list__item">Unlimited Websites</li>
-                            <li class="list__item">Unlimited Bandwidth</li>
-                            <li class="list__item">100 GB SSD Storage</li>
-                            <li class="list__item">3 GB RAM</li>
-                        </ul>
-                        <button class="btn btn--outline btn-block">BUY NOW</button>
-                    </div>
-                </div>
+    <section class="block container">
+        <header class="block__header">
+            <h2>Host on the Cloud to Keep Growing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, temporibus.</p>
+        </header>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#easy"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Super Easy to Use</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
             </div>
-            <div class="plan plan--popular">
-                <div class="card card--primary">
-                    <header class="card__header">
-                        <h3 class="plan__name">Entry</h3>
-                        <span class="plan__price">$14</span>
-                        <span class="plan__billing-cycle">/month</span>
-                        <span class="badge badge--primary badge--small">10% OFF</span>
-                        <span class="plan__description">Easy start on the cloud</span>
-                    </header>
-                    <div class="card__body">
-                        <ul class="list list--tick">
-                            <li class="list__item">Unlimited Websites</li>
-                            <li class="list__item">Unlimited Bandwidth</li>
-                            <li class="list__item">100 GB SSD Storage</li>
-                            <li class="list__item">3 GB RAM</li>
-                        </ul>
-                        <button class="btn btn--outline btn-block">BUY NOW</button>
-                    </div>
-                </div>
+            <picture>
+                <source type="image/webp" srcset="icons/easy.webp, icons/easy@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/easy.jpg 1x, icons/easy@2x.jpg 2x">
+                <img class="feature__image" src="icons/easy@2x.jpg"
+                    alt="Application screenshot showing easy to use interface">
+            </picture>
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#computer"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">Simply Fast Websites</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
             </div>
-            <div class="plan">
-                <div class="card card--secondary">
-                    <header class="card__header">
-                        <h3 class="plan__name">Entry</h3>
-                        <span class="plan__price">$14</span>
-                        <span class="plan__billing-cycle">/month</span>
-                        <span class="badge badge--secondary badge--small">10% OFF</span>
-                        <span class="plan__description">Easy start on the cloud</span>
-                    </header>
-                    <div class="card__body">
-                        <ul class="list list--tick">
-                            <li class="list__item">Unlimited Websites</li>
-                            <li class="list__item">Unlimited Bandwidth</li>
-                            <li class="list__item">100 GB SSD Storage</li>
-                            <li class="list__item">3 GB RAM</li>
-                        </ul>
-                        <button class="btn btn--outline btn-block">BUY NOW</button>
-                    </div>
-                </div>
+            <picture>
+                <source type="image/webp" srcset="icons/fast.webp, icons/fast@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/fast.jpg 1x, icons/fast@2x.jpg 2x">
+                <img class="feature__image" src="icons/fast@2x.jpg" alt="Application screenshot showing fast response">
+            </picture>
+        </article>
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content">
+                <span class="icon-container">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="icons/sprite.svg#wordpress"></use>
+                    </svg>
+                </span>
+                <h3 class="feature__heading">WordPress made easy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
+                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
+                    aspernatur
+                    eveniet molestiae quam tempora.</p>
+                <a href="#" class="link-arrow">Learn More</a>
             </div>
-        </div>
+            <picture>
+                <source type="image/webp" srcset="icons/wordpress.webp, icons/wordpress@2x.webp 2x">
+                <source type="image/jpg" srcset="icons/wordpress.jpg 1x, icons/wordpress@2x.jpg 2x">
+                <img class="feature__image" src="icons/wordpress@2x.jpg"
+                    alt="Application screenshot showing wordpress website">
+            </picture>
+        </article>
     </section>
     <script src="js/main.js"></script>
 </body>
