--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,73 +16,67 @@
 </head>
 
 <body>
-    <section class="block container">
+    <section class="block block--dark block--skewed-right block-showcase">
         <header class="block__header">
-            <h2>Host on the Cloud to Keep Growing</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, temporibus.</p>
+            <h2>User-friendly Control Panel</h2>
         </header>
-        <article class="grid grid--1x2 feature">
-            <div class="feature__content">
-                <span class="icon-container">
-                    <svg class="icon icon--primary">
-                        <use xlink:href="icons/sprite.svg#easy"></use>
-                    </svg>
-                </span>
-                <h3 class="feature__heading">Super Easy to Use</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
-                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
-                    aspernatur
-                    eveniet molestiae quam tempora.</p>
-                <a href="#" class="link-arrow">Learn More</a>
-            </div>
-            <picture>
-                <source type="image/webp" srcset="icons/easy.webp, icons/easy@2x.webp 2x">
-                <source type="image/jpg" srcset="icons/easy.jpg 1x, icons/easy@2x.jpg 2x">
-                <img class="feature__image" src="icons/easy@2x.jpg"
-                    alt="Application screenshot showing easy to use interface">
+        <div class="container grid grid--1x2">
+            <picture class="block-showcase__picture">
+                <source type="image/webp" srcset="icons/ipad.webp 1x, icons/ipad@2x.webp 2x">
+                <source type="image/png" srcset="icons/ipad.png 1x, icons/ipad@2x.png 2x">
+                <img class="block-showcase__image" src="icons/ipad@2x.png" alt="IPad Image">
             </picture>
-        </article>
-        <article class="grid grid--1x2 feature">
-            <div class="feature__content">
-                <span class="icon-container">
-                    <svg class="icon icon--primary">
-                        <use xlink:href="icons/sprite.svg#computer"></use>
-                    </svg>
-                </span>
-                <h3 class="feature__heading">Simply Fast Websites</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
-                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
-                    aspernatur
-                    eveniet molestiae quam tempora.</p>
-                <a href="#" class="link-arrow">Learn More</a>
-            </div>
-            <picture>
-                <source type="image/webp" srcset="icons/fast.webp, icons/fast@2x.webp 2x">
-                <source type="image/jpg" srcset="icons/fast.jpg 1x, icons/fast@2x.jpg 2x">
-                <img class="feature__image" src="icons/fast@2x.jpg" alt="Application screenshot showing fast response">
-            </picture>
-        </article>
-        <article class="grid grid--1x2 feature">
-            <div class="feature__content">
-                <span class="icon-container">
-                    <svg class="icon icon--primary">
-                        <use xlink:href="icons/sprite.svg#wordpress"></use>
-                    </svg>
-                </span>
-                <h3 class="feature__heading">WordPress made easy</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores velit deserunt consectetur sint
-                    voluptatum facere voluptatibus in commodi consequatur et facilis repudiandae, quis rem alias
-                    aspernatur
-                    eveniet molestiae quam tempora.</p>
-                <a href="#" class="link-arrow">Learn More</a>
-            </div>
-            <picture>
-                <source type="image/webp" srcset="icons/wordpress.webp, icons/wordpress@2x.webp 2x">
-                <source type="image/jpg" srcset="icons/wordpress.jpg 1x, icons/wordpress@2x.jpg 2x">
-                <img class="feature__image" src="icons/wordpress@2x.jpg"
-                    alt="Application screenshot showing wordpress website">
-            </picture>
-        </article>
+            <ul class="list">
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Easy Start & Managed Updates</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Staging, Git & WP-CLI</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="media">
+                        <div class="media__image">
+                            <svg class="icon icon--primary">
+                                <use xlink:href="icons/sprite.svg#snap"></use>
+                            </svg>
+                        </div>
+                        <div class="media__body">
+                            <h3 class="media__title">Dynamic Caching & More</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
+                                delectus quae,
+                                perspiciatis quod corporis nam tenetur saepe.
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <script src="js/main.js"></script>
 </body>
