--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,66 +16,44 @@
 </head>
 
 <body>
-    <section class="block block--dark block--skewed-right block-showcase">
+    <section class="block">
         <header class="block__header">
-            <h2>User-friendly Control Panel</h2>
+            <h2>What our Customers are saying</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, error.</p>
         </header>
-        <div class="container grid grid--1x2">
-            <picture class="block-showcase__picture">
-                <source type="image/webp" srcset="icons/ipad.webp 1x, icons/ipad@2x.webp 2x">
-                <source type="image/png" srcset="icons/ipad.png 1x, icons/ipad@2x.png 2x">
-                <img class="block-showcase__image" src="icons/ipad@2x.png" alt="IPad Image">
-            </picture>
-            <ul class="list">
-                <li>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon--primary">
-                                <use xlink:href="icons/sprite.svg#snap"></use>
+        <div class="container">
+            <div class="card testimonial">
+                <div class="grid grid--1x2">
+                    <div class="testimonial__img">
+                        <img src="icons/testimonial.jpg" alt="A happy, smiling component">
+                        <span class="icon-container icon-container--accent">
+                            <svg class="icon--small icon--white">
+                                <use xlink:href="icons/sprite.svg#quotes"></use>
                             </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="media__title">Easy Start & Managed Updates</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
-                                delectus quae,
-                                perspiciatis quod corporis nam tenetur saepe.
-                            </p>
-                        </div>
+                        </span>
                     </div>
-                </li>
-                <li>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon--primary">
-                                <use xlink:href="icons/sprite.svg#snap"></use>
-                            </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="media__title">Staging, Git & WP-CLI</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
-                                delectus quae,
-                                perspiciatis quod corporis nam tenetur saepe.
-                            </p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon--primary">
-                                <use xlink:href="icons/sprite.svg#snap"></use>
-                            </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="media__title">Dynamic Caching & More</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam id cumque
-                                delectus quae,
-                                perspiciatis quod corporis nam tenetur saepe.
-                            </p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+                    <blockquote class="quote">
+                        <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio
+                            odio
+                            natus eos
+                            dicta tempora delectus cumque enim qui nisi.
+                        </p>
+                        <footer>
+                            <div class="media">
+                                <div class="media__image">
+                                    <svg class="icon icon--primary quote__line">
+                                        <use xlink:href="icons/sprite.svg#line"></use>
+                                    </svg>
+                                </div>
+                                <div class="media__body">
+                                    <h3 class="media__title quote__author">John Smith</h3>
+                                    <p class="quote__org">ABC Company</p>
+                                </div>
+                            </div>
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/main.js"></script>
