--- a/Moshify/index.html
+++ b/Moshify/index.html
@@ -16,46 +16,74 @@
 </head>
 
 <body>
-    <section class="block">
-        <header class="block__header">
-            <h2>What our Customers are saying</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, error.</p>
-        </header>
-        <div class="container">
-            <div class="card testimonial">
-                <div class="grid grid--1x2">
-                    <div class="testimonial__img">
-                        <img src="icons/testimonial.jpg" alt="A happy, smiling component">
-                        <span class="icon-container icon-container--accent">
-                            <svg class="icon--small icon--white">
-                                <use xlink:href="icons/sprite.svg#quotes"></use>
-                            </svg>
-                        </span>
-                    </div>
-                    <blockquote class="quote">
-                        <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae optio
-                            odio
-                            natus eos
-                            dicta tempora delectus cumque enim qui nisi.
-                        </p>
-                        <footer>
-                            <div class="media">
-                                <div class="media__image">
-                                    <svg class="icon icon--primary quote__line">
-                                        <use xlink:href="icons/sprite.svg#line"></use>
-                                    </svg>
-                                </div>
-                                <div class="media__body">
-                                    <h3 class="media__title quote__author">John Smith</h3>
-                                    <p class="quote__org">ABC Company</p>
-                                </div>
-                            </div>
-                        </footer>
-                    </blockquote>
+    <footer class="block block--dark footer">
+        <div class="container grid footer__grid-section">
+            <section class="collapsible collapsible--expanded footer__section">
+                <header class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Products</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="icons/sprite.svg#chevron"></use>
+                    </svg>
+                </header>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Website Hosting</a></li>
+                        <li><a href="#">Free Automated Wordpress</a></li>
+                        <li><a href="#">Migrations</a></li>
+                    </ul>
                 </div>
-            </div>
+            </section>
+            <section class="collapsible footer__section">
+                <header class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Company</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="icons/sprite.svg#chevron"></use>
+                    </svg>
+                </header>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Affiliates</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="collapsible footer__section">
+                <header class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Suppport</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="icons/sprite.svg#chevron"></use>
+                    </svg>
+                </header>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Knowledge Base</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="collapsible footer__section">
+                <header class="collapsible__header">
+                    <h2 class="collapsible__heading footer__heading">Domains</h2>
+                    <svg class="icon icon--white collapsible__chevron">
+                        <use xlink:href="icons/sprite.svg#chevron"></use>
+                    </svg>
+                </header>
+                <div class="collapsible__content">
+                    <ul class="list">
+                        <li><a href="#">Domain Checker</a></li>
+                        <li><a href="#">Domain Transfer</a></li>
+                        <li><a href="#">Free Domain</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer__brand">
+                <img class="footer__image" src="icons/logo.svg" alt="">
+                <p class="footer__copyright">Copyright 2022 Mosh Hamedani</p>
+            </section>
         </div>
-    </section>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
